@@ -1705,6 +1705,7 @@ CLANFORUMDATA=[] a Journal of <CLANTYPE> <CLANNAME> READ=-<1 POST=-<1 -CLAN "+<C
 # http://www.mydomain.com:27744/sounds/
 # or
 # http://21.1.231.23:80/sounds/
+# These would correspond to paths /web/pub/sounds/
 # The port number in the URL, if any, should match the
 # port number in the pub.ini for your web server.
 #
@@ -1726,6 +1727,7 @@ SOUNDPATH=http://localhost:27744/sounds/
 # http://www.mydomain.com:27744/images/mxp
 # or
 # http://21.1.231.23:80/images/mxp
+# These would correspond to paths /web/pub/images/mxp/
 # The port number in the URL, if any, should match the
 # port number in the pub.ini for your web server.
 #
