@@ -280,10 +280,10 @@ REACTION6=<CODE>_DISLIKED;-NAMES "+<NAME>" -CHANCE 90 +DISPOSITION -ISHIDDEN -IS
 REACTION7=<CODE>_LIKED;-NAMES "+<NAME>" -CHANCE 85;Mood;happy
 REACTION8=<CODE>_LIKED;-NAMES "+<NAME>" -CHANCE 85;Emote;smiles.
 REACTION9=<CODE>_LOVED;-NAMES "+<NAME>" -CHANCE 80;Say;Hello <TARGET>.
-REACTION10=<CODE>_LOVED;-NAMES "+<NAME>";MudChat;
+REACTION10=<CODE>_LOVED;-NAMES "+<NAME>" +EFFECTS -MudChat;MudChat;
 REACTION11=<CODE>_LOVED;-NAMES "+<NAME>";Mood;happy
 REACTION12=<CODE>_HERO;-NAMES "+<NAME>" -CHANCE 75;Spell_AweOther;<TARGET>
-REACTION12=<CODE>_HERO;-NAMES "+<NAME>";MudChat;
+REACTION12=<CODE>_HERO;-NAMES "+<NAME>" +EFFECTS -MudChat;MudChat;
 REACTION13=<CODE>_HERO;-NAMES "+<NAME>";Mood;happy
 REACTION14=<CODE>_HERO;-NAMES "+<NAME>" -CHANCE 80;Say;Hail <TARGET>, my personal hero!
 REACTION15=<CODE>_HERO;-NAMES "+<NAME>";Spell_AweOther;<TARGET>
