@@ -280,10 +280,10 @@ REACTION6=<CODE>_DISLIKED;-HOME "+<NAME>" +INT 5 -CHANCE 90 +DISPOSITION -ISHIDD
 REACTION7=<CODE>_LIKED;-HOME "+<NAME>" +INT 5 -CHANCE 85;Mood;happy
 REACTION8=<CODE>_LIKED;-HOME "+<NAME>" +INT 5 -CHANCE 85;Emote;smiles.
 REACTION9=<CODE>_LOVED;-HOME "+<NAME>" +INT 5 -CHANCE 80;Say;Hello <TARGET>.
-REACTION10=<CODE>_LOVED;-HOME "+<NAME>" +INT 5;MudChat;
+REACTION10=<CODE>_LOVED;-HOME "+<NAME>" +INT 5 +EFFECTS -MudChat;MudChat;
 REACTION11=<CODE>_LOVED;-HOME "+<NAME>" +INT 5;Mood;happy
 REACTION12=<CODE>_HERO;-HOME "+<NAME>" +INT 5 -CHANCE 75;Spell_AweOther;<TARGET>
-REACTION12=<CODE>_HERO;-HOME "+<NAME>" +INT 5;MudChat;
+REACTION12=<CODE>_HERO;-HOME "+<NAME>" +INT 5 +EFFECTS -MudChat;MudChat;
 REACTION13=<CODE>_HERO;-HOME "+<NAME>" +INT 5;Mood;happy
 REACTION14=<CODE>_HERO;-HOME "+<NAME>" +INT 5 -CHANCE 80;Say;Hail <TARGET>, hero of <NAME>!
 REACTION15=<CODE>_HERO;-HOME "+<NAME>" +INT 5;Spell_AweOther;<TARGET>
