@@ -280,10 +280,10 @@ REACTION6=<CODE>_DISLIKED;-RACE "+<CLASSID>" -CHANCE 90 +DISPOSITION -ISHIDDEN -
 REACTION7=<CODE>_LIKED;-RACE "+<CLASSID>" -CHANCE 85;Mood;happy
 REACTION8=<CODE>_LIKED;-RACE "+<CLASSID>" -CHANCE 85;Emote;smiles.
 REACTION9=<CODE>_LOVED;-RACE "+<CLASSID>" -CHANCE 80;Say;Hello <TARGET>.
-REACTION10=<CODE>_LOVED;-RACE "+<CLASSID>";MudChat;
+REACTION10=<CODE>_LOVED;-RACE "+<CLASSID>" +EFFECTS -MudChat;MudChat;
 REACTION11=<CODE>_LOVED;-RACE "+<CLASSID>";Mood;happy
 REACTION12=<CODE>_HERO;-RACE "+<CLASSID>" -CHANCE 75;Spell_AweOther;<TARGET>
-REACTION12=<CODE>_HERO;-RACE "+<CLASSID>";MudChat;
+REACTION12=<CODE>_HERO;-RACE "+<CLASSID>" +EFFECTS -MudChat;MudChat;
 REACTION13=<CODE>_HERO;-RACE "+<CLASSID>";Mood;happy
 REACTION14=<CODE>_HERO;-RACE "+<CLASSID>" -CHANCE 80;Say;Hail <TARGET>, hero of all <NAME>s!
 REACTION15=<CODE>_HERO;-RACE "+<CLASSID>";Spell_AweOther;<TARGET>
