@@ -3,7 +3,7 @@ EXCLAMATION_POINT=\
 Command : !\n\r\
 Usage   : !([MATCH STRING])\n\r\
 Example : !\n\r\
-Example : !(loo)\n\r\
+Example : !loo\n\r\
 Short(s): \n\r\
 Repeats the last command you entered, or the last one that \
 matches the given string.  Use HISTORY to see the list of \
@@ -149,7 +149,7 @@ statistics about the area in order to help find the one you want.  You can \
 use any normal mathematical calculation and comparisons >, <, >=, =, !=, <>, <=, \
 and can combine expressions using "and" or "or".  Use parenthesis to affect the \
 order of evaluation.  Most importantly, you can test any of the following variables \
-about the areas: $POPULATION, $MIN_LEVEL, $MAX_LEVEL, $AVG_LEVEL, $MED_LEVEL, \
+about the areas: $POPULATION, $MIN_LEVEL, $MAX_LEVEL, $AVG_LEVEL, $MED_LEVEL, $MODE_LEVEL,\
 $AVG_ALIGNMENT, $MED_ALIGNMENT, $TOTAL_LEVELS, $TOTAL_INTELLIGENT_LEVELS, \
 $VISITABLE_ROOMS, $AUTHOR\n\r\
 You can sort the list by the same variables that can be filtered, which will cause \
