@@ -1,5 +1,6 @@
 <!--
 BUG: when you have a boxless screen, the cursor, etc bleeds to other windows.
+BUG: dont try to show control-g, but make the sound and filter it out.
 TODO: new input should auto-down-scroll when enter is hit (not before)
 TODO: boxless mode doesn't support up-arrow
 TODO: split-screen scroll-back
